unpackaged/main/default/objects/project_cloud__Revenue_Recognition__c/project_cloud__Revenue_Recognition__c.object-meta.xml
<CustomObject>
    <label>Revenue Recognition</label>
    <nameField>
        <displayFormat>RR-{0000000000}</displayFormat>
        <label>Revenue Recognition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Recognition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>