unpackaged/main/default/objects/project_cloud__Revenue_Recognition__c/fields/project_cloud__Amount__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>