unpackaged/main/default/objects/project_cloud__Revenue_Recognition__c/fields/project_cloud__Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>