unpackaged/main/default/objects/project_cloud__Revenue_Recognition__c/fields/project_cloud__Description__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Description__c</fullName>
    <description>This field will allow users to add a description about what the Revenue Recognition is about.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>