unpackaged/main/default/objects/project_cloud__Revenue_Recognition__c/fields/project_cloud__Project__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Project that this revenue recognition is related to</description>
    <label>Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Revenue Recognitions</relationshipLabel>
    <relationshipName>Revenue_Recognitions</relationshipName>
    <type>Lookup</type>
</CustomField>